# examples

./: .buildinfo  .gitignore  LICENSE  README.md  bibliography.doctree  bibliography.html  genindex.html  index.doctree  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: README.md  documentation.yml
_downloads/7489ef1cb2520f4d5554c35851092f14/: plotly_plotting.ipynb
_downloads/79c89303dabadb8bcf5dd2287ff3d20a/: linear_solvers.ipynb
_downloads/89b4e30ffa98a9fa68ebc13064047a91/: plotly_plotting.py
_downloads/d459ea9cc493c923739a6061a920d70c/: linear_solvers.py
_sources/: bibliography.rst.txt
_sources/gallery/: index.rst.txt  linear_solvers.rst.txt  plotly_plotting.rst.txt  sg_execution_times.rst.txt
_static/css/: custom.css
docs/: Makefile  conf.py  index.rst  references.bib
docs/_static/css/: custom.css
gallery/: index.doctree  index.html  linear_solvers.doctree  linear_solvers.html  plotly_plotting.doctree  plotly_plotting.html  sg_execution_times.doctree  sg_execution_times.html
josch_examples/: README.rst  __init__.py  linear_solvers.py  plotly_plotting.py
shared_scripts/: openmeteo.py
