[tool.poetry]
name = "josch_examples"
version = "0.0.0"
description = "Some josch_examples"
authors = ["Josch D"]
license = "MIT"

packages = [
    {include = "josch_examples"}
]

readme = "README.md"
repository = "https://github.com/JoschD/josch_examples"

keywords = ["Examples",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
]

# Core dependencies of the package
[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19"
scipy = "^1.4"
cvxpy = "^1.2.0"
pandas = "^1.0"
tfs-pandas = "^3.0"
matplotlib = "^3.0"
plotly = "^5.6.0"

[tool.poetry.dev-dependencies]
# Additional Plotting Block
kaleido = "^0.2.1"

# Documentation Block
Sphinx = "^4.4"
sphinx-rtd-theme = "^1.0"
sphinx-issues = "^3.0"
sphinx-copybutton = "<1.0"
sphinxcontrib-bibtex = "^2.4"
sphinx-panels = "<1.0"
sphinx-gallery = "<1.0"
sphinx-prompt = "^1.5"



# ----- Utilities Configuration ----- #

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
